# hecate

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  flash.sh  release.sh
releases/: hecate_1_00.uf2
src/: hcd_hybrid.c  hid_to_ps2.c  hid_to_ps2.h  led.c  led.h  main.c  ps2_keyboard.c  ps2_keyboard.h  ps2_mouse.c  ps2_mouse.h  ps2lib.c  ps2lib.h  ps2lib.pio  ps2out.c  ps2out.h  ps2out.pio  scancodes.h  tusb_config.h  usb_keyboard.c  usb_keyboard.h
tinyusb_patches/: hcd_pio_usb.c  hcd_rp2040.c
